--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home | My Bootstrap Blueprint I</title>
-    <link rel="stylesheet" type="text/css"      href="css/bootstrap.min.css">
+    <title>Dashboard | My Bootstrap Blueprint I</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/theme.css">
+    <link rel="stylesheet" type="text/css" href="css/chartist.min.css">
+    <link href='https://fonts.googleapis.com/ css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,23 +20,30 @@
 
 <body>
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
+            <button type="button" class="navbar-toggle"
+                    datatoggle="collapse" data-target="#bootboard-nav">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand">My Bootstrap Blueprint I</a>
+            <a class="navbar-brand" href="#">Bootstrap<span>Dashboard</span></a>
         </div>
-        <div class="collapse navbar-collapse" id="navbar1">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </div>
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+            </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <i class="fa fa-user"></i> John Smith
+            </li>
+        </ul>
     </div>
 </nav>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -44,15 +53,26 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12">
-            &copy; 2016 Daniel Park
+<!-- footer //-->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><a href="#"><i class="fa fa-facebook-official"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-pinterest-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+                    <li>&copy; 2015 Bootstrap Dashboard</li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
+</footer>
 <!-- javascript //-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min. js"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/chartist.min.js" type="text/javascript"></script>
+<script src="js/bootboard-charts.js" type="text/javascript"></script>
 </body>
 </html>
